--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,6 +10,11 @@
     </div>
 
     <nav class="sidebar-nav">
+      <a class="sidebar-nav-item" href="#History">History</a>  
+      <a class="sidebar-nav-item" href="#About Minesweeper">About Minesweeper</a>  
+      <a class="sidebar-nav-item" href="#Developing Minesweeper">Developing Minesweeper</a>  
+      <a class="sidebar-nav-item" href="#Technologies Used">Technologies Used</a>  
+      
       <a class="sidebar-nav-item" href="{{ site.github.repo }}/zipball/master">Download Zip</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
     </nav>
