--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,7 @@
       <a class="sidebar-nav-item" href="#Technologies Used">Technologies Used</a>  
       <br /><br /><br />
       <a class="sidebar-nav-item" href="{{ site.github.repo }}/zipball/master">Download Zip</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}">View Project on Github</a>
     </nav>
 
     <p>This project is maintained by <a href="{{ site.author.url }}">{{ site.author.name }}</a>.</p>
