--- a/public/css/Minesweeper.css
+++ b/public/css/Minesweeper.css
@@ -3,7 +3,8 @@
 html, body{
 	width: 100%;
 	height: 100%;
-	background-color: #33CCFF;
+	#background-color: #33CCFF;
+	background-color: #F6F6F6;
 }
 #div2{
 	width: 100%;
@@ -85,6 +86,7 @@ svg1{
 	text-align: center;
 	font-size: 100%;
 	font-family: "Comic Sans MS", cursive, sans-serif;
+	color: #00000;
 }
 
 ol{
@@ -98,7 +100,24 @@ ol{
 	text-align: center;
 	font-size: 115%;
 	font-family: Georgia, serif;
-	color: #FF0099;
+	color: #E9E581;
 	font-weight: bold;
 	font-style: italic;
+}
+
+h1{
+	background-color: #2B2B2B;
+	padding: 5px;
+	color: #F6F6F6;
+	margin-bottom: -5px;
+	margin-top: -5px;
+}
+
+hr{
+	border-color: #DE1B1B;
+	margin-bottom: -5px;
+}
+
+h2{
+	margin-bottom: -15px;
 }
